# seqvault

./: .env.example  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: config.rs  main.rs  server.rs
api/src/handlers/: commit.rs  mod.rs  simulate.rs
contracts/: package.json  tact.config.json
contracts/scripts/: deployAnchor.ts
contracts/src/: seqvault_anchor.tact  types.tact
contracts/tests/: SeqvaultAnchor.spec.ts
seqvault_core/: Cargo.toml
seqvault_core/src/: emulator.rs  lib.rs  merkle.rs  sequence.rs
